--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-stack-grid": "^0.7.1",
     "redux": "^4.0.1"
   },
   "scripts": {
