--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-stack-grid": "^0.7.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.2"
   },
   "scripts": {
     "start": "react-scripts start",
